# easyscp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  copy.md  feature_request.md  question.md  security.md
.github/workflows/: ci.yml  codeberg-mirror.yml  install.yml  pages.yml  release.yml
docs/en-US/: SUMMARY.md  book.toml  index.md
docs/en-US/cli/: cli.md
docs/en-US/configuration/: configuration.md  logging.md  notifications.md  password-security.md  ssh-keys.md  themes.md
docs/en-US/developer/: developer.md
docs/en-US/getting-started/: connecting.md  connection-parameters.md  installation.md
docs/en-US/usage/: bookmarks.md  file-explorer.md  keyboard-shortcuts.md  multiple-files.md  open-edit-files.md
docs/misc/: README.deb.txt  release-process.md
docs/zh-CN/: README.md  SUMMARY.md  book.toml  index.md
docs/zh-CN/cli/: cli.md
docs/zh-CN/configuration/: configuration.md  logging.md  notifications.md  password-security.md  ssh-keys.md  themes.md
docs/zh-CN/developer/: developer.md
docs/zh-CN/getting-started/: connecting.md  connection-parameters.md  installation.md
docs/zh-CN/theme/: head.hbs
docs/zh-CN/usage/: bookmarks.md  file-explorer.md  keyboard-shortcuts.md  multiple-files.md  open-edit-files.md
site/: astro.config.mjs  package-lock.json  package.json  vercel.json
site/public/: robots.txt
site/src/: consts.ts
site/src/components/: ExplorerHero.astro  Footer.astro  Nav.astro
site/src/layouts/: Base.astro
site/src/pages/: index.astro  install.astro  privacy.astro
src/: cli.rs  config.rs  explorer.rs  filetransfer.rs  main.rs  support.rs
src/config/: bookmarks.rs  params.rs  serialization.rs  themes.rs
src/support/: import_ssh_hosts.rs
src/system/: auto_update.rs  bookmarks_client.rs  config_client.rs  environment.rs  logging.rs  notifications.rs  sshkey_storage.rs  theme_provider.rs
src/system/keys/: filestorage.rs  keyringstorage.rs
src/ui/activities/: setup.rs
src/ui/activities/auth/: misc.rs
src/ui/activities/auth/components/: popup.rs  text.rs
src/ui/activities/filetransfer/components/popups/: keybindings.rs  quit.rs
src/ui/activities/filetransfer/misc/: host.rs
src/ui/activities/setup/: actions.rs  config.rs  update.rs  view.rs
src/ui/activities/setup/view/: setup.rs  ssh_keys.rs  theme.rs
src/utils/: parser.rs
